Terraform/NGINX/GCP/k8s_ubuntu/manifests/dvga/ingress-dvga.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dvga
  namespace: dvga
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dvga
                port:
                  number: 80
